fix: alignments

--- a/src/css/_03-generic.scss
+++ b/src/css/_03-generic.scss
@@ -81,8 +81,9 @@ a, a:hover, a:active, a:visited, #colophon .site-info a:hover, .main-navigation 
 }
 
 .main-navigation .main-menu > li {
-	padding-right: 1rem;
-	padding-bottom: 0.5rem;
+	padding-left: 1rem;
+	padding-top: 0.25rem;
+	padding-bottom: 0.25rem;
 	display: inline-block;
 }
 
